# motion_system

./: .gitignore  .gitmodules  README.md  kinematic_test.py  publish_motor_state_once.sh  visualization_data.py
common/common_motor_interface/: CMakeLists.txt  README.md  package.xml
common/common_motor_interface/include/common_motor_interface/: motor_frame.hpp
common/common_robot_interface/: README.md  package.xml  setup.cfg  setup.py
common/common_robot_interface/src/common_robot_interface/: __init__.py  action.py  action_frame.py  joint.py  joint_frame.py  joy.py  robot.py  state.py  state_frame.py
lib/motor_manager/: CMakeLists.txt  README.md  package.xml
lib/motor_manager/communications/ethercat/: CMakeLists.txt  README.md
lib/motor_manager/communications/ethercat/include/ethercat/: ethercat_controller.hpp  ethercat_master.hpp
lib/motor_manager/communications/ethercat/src/: ethercat_controller.cpp  ethercat_master.cpp
lib/motor_manager/core/motor_interface/: CMakeLists.txt  README.md
lib/motor_manager/core/motor_interface/include/motor_interface/: motor_controller.hpp  motor_driver.hpp  motor_master.hpp
lib/motor_manager/hardware/minas/: CMakeLists.txt  README.md
lib/motor_manager/hardware/minas/include/minas/: minas_driver.hpp
lib/motor_manager/hardware/minas/src/: minas_driver.cpp
lib/motor_manager/hardware/zeroerr/: CMakeLists.txt  README.md
lib/motor_manager/hardware/zeroerr/include/zeroerr/: zeroerr_driver.hpp
lib/motor_manager/hardware/zeroerr/src/: zeroerr_driver.cpp
lib/motor_manager/motor_manager/: CMakeLists.txt  README.md
lib/motor_manager/motor_manager/include/motor_manager/: motor_manager.hpp
lib/motor_manager/motor_manager/src/: motor_manager.cpp
lib/robot_manager/: README.md
lib/robot_manager/core/robot_interface/: README.md  package.xml  setup.py
lib/robot_manager/kinematics/: README.md  package.xml  setup.py
lib/robot_manager/lib/robot_control/: package.xml
lib/robot_manager/lib/robot_interface/: package.xml
lib/robot_manager/planner/: README.md  package.xml  setup.py
lib/robot_manager/planner/src/planner/: __init__.py  gait_trajectory_planner.py
lib/robot_manager/robot_manager/: README.md  package.xml  setup.py
lib/robot_manager/robots/: README.md  package.xml  setup.py
lib/robot_manager/robots/src/robots/: __init__.py  little_reader.py  silver_lain.py
lib/robot_manager/scheduler/: README.md  package.xml  setup.py
log/: latest_list
motion_system_msgs/msg/: MotorFrameMultiArray.msg
motion_system_pkg/: CMakeLists.txt  package.xml
motion_system_pkg/include/motion_system_pkg/: motor_manager_node.hpp
motion_system_pkg/src/: motor_manager_node.cpp
ros2/motion_system_msgs/: CMakeLists.txt  README.md  package.xml
ros2/motion_system_msgs/msg/: MotorFrame.msg
ros2/motion_system_pkg/: CMakeLists.txt  README.md  package.xml
ros2/motion_system_pkg/config/: ethercat.yaml  ethercat_integrated.yaml  ethercat_zeroerr.yaml  example.yaml  little_reader.yaml  silver_lain.yaml
ros2/motion_system_pkg/include/motion_system_pkg/: motor_manager_node.hpp
ros2/motion_system_pkg/launch/: joy.launch.py  motion_system.launch.py  motor_manager_node.launch.py  robot_manager_node.launch.py  teleop.launch.py
ros2/motion_system_pkg/param/: minas_a6.yaml  zeroerr_v6.yaml
ros2/motion_system_pkg/scripts/: pub_motor_state_once.sh  robot_manager_node.py
ros2/motion_system_pkg/src/: motor_manager_node.cpp
ros2/motion_system_ros2/: README.md
ros2/motion_system_ros2/motion_control_bridge/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_bridge/config/: example.yaml  example_ethercat_minas.yaml  example_serial_dynamixel.yaml
ros2/motion_system_ros2/motion_control_bridge/launch/: motor_manager_node.launch.py
ros2/motion_system_ros2/motion_control_bridge/src/: motor_manager_node.cpp
ros2/motion_system_ros2/motion_control_midi/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_midi/launch/: motion_control_midi_node.launch.py
ros2/motion_system_ros2/motion_control_midi/src/: motion_control_midi_node.cpp
ros2/motion_system_ros2/motion_control_msgs/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motion_control_robot/: package.xml  setup.cfg  setup.py
ros2/motion_system_ros2/motion_control_robot/config/: rocking_chair.yaml
ros2/motion_system_ros2/motion_control_robot/launch/: robot_manager_node.launch.py
ros2/motion_system_ros2/motion_control_robot/motion_control_robot/: robot_manager_node.py
ros2/motion_system_ros2/motion_control_robot/motions/: rocking_chair.csv
ros2/motion_system_ros2/motion_control_rqt/: CMakeLists.txt  package.xml  plugin.xml
ros2/motion_system_ros2/motion_control_rqt/launch/: display_motor_manager_node.launch.py
ros2/motion_system_ros2/motion_control_rqt/scripts/: run_rqt
ros2/motion_system_ros2/motion_system/: package.xml  setup.cfg  setup.py
ros2/motion_system_ros2/motor_status_msgs/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/motor_status_msgs/msg/: MotorStatus.msg
ros2/motion_system_ros2/ros2_motor_manager/: CMakeLists.txt  package.xml
ros2/motion_system_ros2/ros2_motor_manager/config/: example_canopen_zeroerr.yaml  (+1 more)
ros2/motion_system_ros2/rqt_motion_system/: CMakeLists.txt  package.xml  plugin.xml
ros2/test_pkg/: package.xml  setup.py
ros2/test_pkg/data/: 10_action.npy  10_condition.npy  10_obs.npy  11_action.npy  11_condition.npy  11_obs.npy  12_action.npy  12_condition.npy  12_obs.npy  13_action.npy  13_condition.npy  13_obs.npy  14_action.npy  14_condition.npy  14_obs.npy  15_action.npy  15_condition.npy  15_obs.npy  16_action.npy  16_condition.npy  16_obs.npy  17_action.npy  17_condition.npy  17_obs.npy  18_action.npy  18_condition.npy  18_obs.npy  19_action.npy  19_condition.npy  19_obs.npy  1_action.npy  1_condition.npy  1_obs.npy  20_action.npy  20_condition.npy  20_obs.npy  21_action.npy  21_condition.npy  21_obs.npy  22_action.npy  (+140 more)
ros2/test_pkg/test_pkg/: data_collector_node.py
ros2/utils_pkg/: README.md  package.xml  setup.py
ros2/utils_pkg/utils_pkg/: sine_motor_command_publisher.py
(+29 files in other folders)
