<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robots</name>
  <version>0.1.0</version>
  <description>Concrete robot implementations (Python)</description>
  <maintainer email="seonilchoi98@gmail.com">csi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>common_robot_interface</depend>
  <depend>kinematics</depend>
  <depend>planner</depend>
  <depend>robot_interface</depend>
  <depend>scheduler</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
